@@ -1,11 +1,13 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/ggtree.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
 \docType{methods}
 \name{groupClade}
 \alias{groupClade}
 \alias{groupClade,beast-method}
 \alias{groupClade,codeml-method}
 \alias{groupClade,codeml_mlc-method}
+\alias{groupClade,gg-method}
+\alias{groupClade,ggplot-method}
 \alias{groupClade,hyphy-method}
 \alias{groupClade,jplace-method}
 \alias{groupClade,paml_rst-method}
@@ -19,6 +21,10 @@ groupClade(object, node)
 \S4method{groupClade}{codeml}(object, node)
 
 \S4method{groupClade}{codeml_mlc}(object, node)
+
+\S4method{groupClade}{ggplot}(object, node)
+
+\S4method{groupClade}{gg}(object, node)
 
 \S4method{groupClade}{hyphy}(object, node)
 
